Sidebar gap fix

--- a/src/LifeCounter.ClientApp/src/site/admin/sidebar.scss
+++ b/src/LifeCounter.ClientApp/src/site/admin/sidebar.scss
@@ -7,7 +7,7 @@
 .admin-navigation {
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 1.4em;
     align-items: center;
     padding-top: 4em;
     
